feat: estendi gestione utenti e veicoli con superadmin, manutenzioni dettagliate e galleria
Aggiunti:
- Superadmin con protezioni (non demotabile/né cancellabile), admin normali con possibilità di creare/modificare/eliminare altri utenti (tranne superadmin).
- Flag cambio password obbligato e isolamento dati per utente (veicoli, manutenzioni, scadenze legati a owner_id).
- Modifica utenti: username, password, profilo, admin flag, forza cambio password.
- Elimina veicolo con pulsanti in lista e dettaglio (route POST e funzione db).
- Dettagli manutenzioni espandibili: mostra campi cambiati, codici, marche, tipo olio.
- Galleria immagini migliorata: modal cliccabile, frecce, indicatori, navigazione tastiera.
- Correzione import (aggiunto json), gestione login/cambio password, template aggiornati.
- .gitignore incluso e Docker setup mantenuto.

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ __pycache__/
 *.sqlite3
 *.db
 database.db
-*.py~ 
+*.py~
 
 # Env
 .env
@@ -13,7 +13,7 @@ venv/
 env/
 *.venv
 
-# Uploads / media non tracciati
+# Uploads / media
 static/uploads/
 static/libretti/
 static/profiles/
@@ -24,13 +24,13 @@ static/profiles/
 .DS_Store
 thumbs.db
 
-# Docker (se non vuoi committare build/cache)
+# Docker
 docker-compose.override.yml
 *.log
 
 # Byte-compiled
 *.pyc
 
-# Distribution / build
+# Build
 dist/
 build/
