Integrato Telegram Bot (login, menu, inline veicoli, manutenzioni interattive, notifiche); aggiornato README completo; commentati template HTML e aggiornato db.py per eliminare dipendenza da Flask context

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,15 @@
+# File: docker-compose.yml
+# Docker configuration for the officina project.
+
 version: '3.9'
 services:
-  gestionale:
+  officina:
     build: .
+    container_name: officina
+    restart: unless-stopped
     ports:
       - "5000:5000"
+    environment:
+      - TELEGRAM_TOKEN=${TELEGRAM_TOKEN}
     volumes:
       - .:/app
-    restart: unless-stopped
